(In [14819]) * Send Keep-A-Live RTSP bogus calls for servers that do not support RTCP reports.
Seems to work for WM RTSP. No support yet for Kasenna,
since I don't have proper access to one at this moment.
WM RTSP doesn't work in svn 14909 (and nightly 20060324) using --rtsp-tcp:
Discarding interleaved RTP or RTCP packet (1534 bytes, channel id 0)Discarding interleaved RTP or RTCP packet (1534 bytes, channel id 0)Discarding interleaved RTP or RTCP packet (1534 bytes, channel id 0)Discarding interleaved RTP or RTCP packet (1532 bytes, channel id 0)Discarding interleaved RTP or RTCP packet (1534 bytes, channel id 0)Discarding interleaved RTP or RTCP packet (1531 bytes, channel id 0)
You cannot stop the stream either, you have to wait for it to "expire" (or end task). 0.8.4a does play the stream but has the 2 min. limitation and shows PTS problems.
Changed CC from my work address to my user account.
Currently working on bringing the lincor patchset upto speed with trunk/0.8.6c code bases. I'll get this patch sorted shortly (though it'll probably be incorporated into a full trickplay patch). If required I can try and make it a seperate patch.